# UndergraduateCode

./: .gitignore  .gitmodules  README.md
CSCI2000-HW/Assign_01/: pass1.cpp
CSCI2000-HW/Assign_02/: pass2.cpp
CSCI2000-HW/Assign_03/: pass3.cpp
CSCI2000-HW/Assign_04/: pass4.cpp
CSCI2000-HW/Assign_05/: pass5.cpp
CSCI2000-HW/Assign_06/: pass6.cpp
CSCI2000-HW/Assign_07/: dice.cpp  dice.h  pass7.cpp  player.cpp  player.h
CSCI2000-HW/ClassNotes/: Clock.cpp  Clock.h  class3.cpp  dowhile.cpp  forloop.cpp  plot.cpp  square.cpp
CompPhysics/: README.md
CompPhysics/IsingModel/: README.md  compassign5.cpp
CompPhysics/IsingModel/updated/: CMakeLists.txt  ising.cpp  matrix.hpp
CompPhysics/MagnusForce/: README.md  compassign1.cpp
CompPhysics/PowerLine/: Parallelization.pptx  VoltGraphGen.m  compassign4.cpp  compassign4Pack.cpp
CompPhysics/QuantumProj/: QUANTUMhwmk3.m  README.md  compassign6.cpp
CompPhysics/SolSysModel/: compassign2test.cpp
CompPhysics/WaveEq/: compassign3.cpp  giftest.m
CompPhysics2/BarnesHut/: Makefile  README.md  a.out  body.h  forcePairs.cpp  quadTree.cpp  serial  serial.cpp
CompPhysics2/DGEMM/: Makefile  README.md  benchmark-blas  benchmark-blocked  benchmark-naive  benchmark.c  dgemm-blas.c  dgemm-blocked-test.c  dgemm-blocked.c  dgemm-naive.c  dgemm-original.c  job-blas  job-blocked  job-naive
CompPhysics2/DNA-Seq/: Makefile  README  contig_generation.h  contig_generation_shared.h  init.sh  job-scale-multi-node  job-scale-single-node  job-serial  job-upc  kmer_hash.h  kmer_hash_shared.h  members.txt  multi-HW3.2940644.err  (+11 more)
(+84 files in other folders)
